package com.categoryservice.category.controller;

public class CategoryController {
}
