package com.categoryservice.category.dto;

public record CategoryRequestDTO() {
}
