package com.categoryservice.category.mapper;

public class CategoryMapper {
}
