package com.categoryservice.category.service;

public class CategoryService {
}
